--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Sneakers Store</title>
+    <title>Nike Store</title>
 </head>
 
 <body>
@@ -27,7 +27,8 @@
                 <span class="limitedOffer">Limited Offer!</span>
             </div>
         </div>
-        
+    </nav>
+        <nav id="navsub">
         <div class="navBottom">
             <h3 class="menuItem">AIR FORCE</h3>
             <h3 class="menuItem">JORDAN</h3>
@@ -35,14 +36,14 @@
             <h3 class="menuItem">CRATER</h3>
             <h3 class="menuItem">HIPPIE</h3>
         </div>
-    </nav>
+        </nav>
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
                 <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">2499</h2>
+                <h2 class="sliderPrice">₹2499</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -51,7 +52,7 @@
                 <img src="./img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR JORDAN</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">1999</h2>
+                <h2 class="sliderPrice">₹1999</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -60,7 +61,7 @@
                 <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">2429</h2>
+                <h2 class="sliderPrice">₹2429</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -69,7 +70,7 @@
                 <img src="./img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">CRATER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice"></h2>
+                <h2 class="sliderPrice">₹1849</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -78,7 +79,7 @@
                 <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">2576</h2>
+                <h2 class="sliderPrice">₹2576</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -113,10 +114,9 @@
         <img src="./img/air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
-            <h2 class="productPrice">2499</h2>
-            <p class="productDesc">Lorem ipsum dolor sit amet consectetur impal adipisicing elit. Alias assumenda
-                dolorum
-                doloremque sapiente aliquid aperiam.</p>
+            <h2 class="productPrice">₹2499</h2>
+            <p class="productDesc">The company itself is a great company to pursue the impal adipisicing of the company. I will open something with a wise
+            man to assume other pains and sufferings.</p>
             <div class="colors">
                 <div class="color"></div>
                 <div class="color"></div>
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Lama Dev. All rights reserved. 2022.</span>
+                <span class="copyright">@ we3.  All rights reserved. 2022.</span>
             </div>
         </div>
     </footer>
