--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
             <h2 class="productPrice">₹2499</h2>
-            <p class="productDesc">The company itself is a great company to pursue the impal adipisicing of the company. I will open something with a wise
-            man to assume other pains and sufferings.</p>
+            <p class="productDesc">The company itself engaged in the design, development, manufacturing, and worldwide marketing and sales of footwear,
+            apparel, equipment, accessories, and services.</p>
             <div class="colors">
                 <div class="color"></div>
                 <div class="color"></div>
