--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
         <div class="payment">
             <h1 class="payTitle">Personal Information</h1>
             <label>Name and Surname</label>
-            <input type="text" placeholder="Name" class="payInput">
+            <input type="text" placeholder="Nelson" class="payInput">
             <label>Phone Number</label>
-            <input type="text" placeholder="+1 0000 0000" class="payInput">
+            <input type="text" placeholder="+91 9999 9999" class="payInput">
             <label>Address</label>
             <input type="text" placeholder="Address" class="payInput">
             <h1 class="payTitle">Card Information</h1>
